hphp/hack/test/typecheck/nested_key_existence_inside_coalesce2.php
<?hh

<<__EntryPoint>>
function main(): void {
  $s = shape('a' => shape('b' => shape('c' => 42)));
  $a = $s['b']['b']['c'] ?? 42;
}
